# nutmeg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Nutmeg/: ConstraintHandler-Geas.cpp  ConstraintHandler-Geas.h  Debug.h  EventHandler-NewSolution.cpp  EventHandler-NewSolution.h  Includes.h  Matrix.h  Model-Constraints.cpp  Model-SolveBC.cpp  Model-SolveCP.cpp  Model-SolveLBBD.cpp  Model-SolveMIP.cpp  Model-UncheckedConstraints.cpp  Model-Variables.cpp  Model.cpp  Model.h  Nutmeg.h  ProblemData.cpp  ProblemData.h  Solution.h  Variable.cpp  Variable.h
examples/cdcplp/: InstanceData.cpp  InstanceData.h  cdcplp.cpp
examples/cdcplp/Instances/: p01-l100-c150-correlated.dzn  p01-l100-c150-uncorrelated.dzn  p01-l100-c300-correlated.dzn  p01-l100-c300-uncorrelated.dzn  p01-l40-c100-correlated.dzn  p01-l40-c100-uncorrelated.dzn  p01-l40-c50-correlated.dzn  p01-l40-c50-uncorrelated.dzn  p01-l50-c150-correlated.dzn  p01-l50-c150-uncorrelated.dzn  p01-l50-c80-correlated.dzn  p01-l50-c80-uncorrelated.dzn  p02-l100-c150-correlated.dzn  p02-l100-c150-uncorrelated.dzn  p02-l100-c300-correlated.dzn  p02-l100-c300-uncorrelated.dzn  p02-l40-c100-correlated.dzn  p02-l40-c100-uncorrelated.dzn  p02-l40-c50-correlated.dzn  p02-l40-c50-uncorrelated.dzn  p02-l50-c150-correlated.dzn  p02-l50-c150-uncorrelated.dzn  p02-l50-c80-correlated.dzn  p02-l50-c80-uncorrelated.dzn  p03-l100-c150-correlated.dzn  p03-l100-c150-uncorrelated.dzn  p03-l100-c300-correlated.dzn  p03-l100-c300-uncorrelated.dzn  p03-l40-c100-correlated.dzn  p03-l40-c100-uncorrelated.dzn  p03-l40-c50-correlated.dzn  p03-l40-c50-uncorrelated.dzn  p03-l50-c150-correlated.dzn  p03-l50-c150-uncorrelated.dzn  p03-l50-c80-correlated.dzn  p03-l50-c80-uncorrelated.dzn  p04-l100-c150-correlated.dzn  p04-l100-c150-uncorrelated.dzn  p04-l100-c300-correlated.dzn  p04-l100-c300-uncorrelated.dzn  (+260 more)
examples/ps/: InstanceData.cpp  InstanceData.h  ps_cost.cpp  ps_cost2.cpp  ps_cost3.cpp  ps_makespan.cpp
examples/ps/Instances/: c10j2m1.dzn  c10j2m2.dzn  c10j2m3.dzn  c10j2m4.dzn  c10j2m5.dzn  c10j3m1.dzn  c10j3m2.dzn  c10j3m3.dzn  c10j3m4.dzn  c10j3m5.dzn  c10j4m1.dzn  c10j4m2.dzn  c10j4m3.dzn  c10j4m4.dzn  c10j4m5.dzn  c12j2m1.dzn  c12j2m2.dzn  c12j2m3.dzn  c12j2m4.dzn  c12j2m5.dzn  c12j3m1.dzn  c12j3m2.dzn  c12j3m3.dzn  c12j3m4.dzn  c12j3m5.dzn  c12j4m1.dzn  c12j4m2.dzn  c12j4m3.dzn  c12j4m4.dzn  c12j4m5.dzn  c14j2m1.dzn  c14j2m2.dzn  c14j2m3.dzn  c14j2m4.dzn  c14j2m5.dzn  c14j3m1.dzn  c14j3m2.dzn  c14j3m3.dzn  c14j3m4.dzn  c14j3m5.dzn  (+295 more)
examples/rcpsp_wet/: InstanceData.cpp  InstanceData.h  rcpsp_wet.cpp
examples/rcpsp_wet/Instances/: j30_1_3-wet.dzn  j30_27_5-wet.dzn  j30_35_9-wet.dzn  j30_43_10-wet.dzn  j30_44_8-wet.dzn  j30_4_8-wet.dzn  j60_19_6-wet.dzn  j60_28_3-wet.dzn  j60_36_8-wet.dzn  j90_10_10-wet.dzn  j90_19_7-wet.dzn  j90_48_4-wet.dzn
examples/vrplc/: InstanceData.cpp  InstanceData.h  vrplc.cpp  vrplc_cost.cpp  vrplc_makespan.cpp
examples/vrplc/Instances/: vrplc10_11_10_s1.txt  vrplc10_11_10_s10.txt  vrplc10_11_10_s2.txt  vrplc10_11_10_s3.txt  vrplc10_11_10_s4.txt  vrplc10_11_10_s5.txt  vrplc10_11_10_s6.txt  vrplc10_11_10_s7.txt  vrplc10_11_10_s8.txt  vrplc10_11_10_s9.txt  vrplc10_11_15_s1.txt  vrplc10_11_15_s10.txt  vrplc10_11_15_s2.txt  vrplc10_11_15_s3.txt  vrplc10_11_15_s4.txt  vrplc10_11_15_s5.txt  vrplc10_11_15_s6.txt  vrplc10_11_15_s7.txt  vrplc10_11_15_s8.txt  vrplc10_11_15_s9.txt  vrplc10_11_20_s1.txt  vrplc10_11_20_s10.txt  vrplc10_11_20_s2.txt  vrplc10_11_20_s3.txt  vrplc10_11_20_s4.txt  vrplc10_11_20_s5.txt  vrplc10_11_20_s6.txt  vrplc10_11_20_s7.txt  vrplc10_11_20_s8.txt  vrplc10_11_20_s9.txt  vrplc10_5_10_s1.txt  vrplc10_5_10_s10.txt  vrplc10_5_10_s2.txt  vrplc10_5_10_s3.txt  vrplc10_5_10_s4.txt  vrplc10_5_10_s5.txt  vrplc10_5_10_s6.txt  vrplc10_5_10_s7.txt  vrplc10_5_10_s8.txt  vrplc10_5_10_s9.txt  (+410 more)
examples/vrplc/Instances/vrplc10/: vrplc10_11_10_s1.txt  vrplc10_11_10_s10.txt  vrplc10_11_10_s2.txt  vrplc10_11_10_s3.txt  vrplc10_11_10_s4.txt  vrplc10_11_10_s5.txt  vrplc10_11_10_s6.txt  vrplc10_11_10_s7.txt  vrplc10_11_10_s8.txt  vrplc10_11_10_s9.txt  vrplc10_11_15_s1.txt  vrplc10_11_15_s10.txt  vrplc10_11_15_s2.txt  vrplc10_11_15_s3.txt  vrplc10_11_15_s4.txt  vrplc10_11_15_s5.txt  vrplc10_11_15_s6.txt  vrplc10_11_15_s7.txt  vrplc10_11_15_s8.txt  vrplc10_11_15_s9.txt  vrplc10_11_20_s1.txt  vrplc10_11_20_s10.txt  vrplc10_11_20_s2.txt  vrplc10_11_20_s3.txt  vrplc10_11_20_s4.txt  vrplc10_11_20_s5.txt  vrplc10_11_20_s6.txt  vrplc10_11_20_s7.txt  vrplc10_11_20_s8.txt  vrplc10_11_20_s9.txt  vrplc10_11_30_s1.txt  vrplc10_11_30_s10.txt  vrplc10_11_30_s2.txt  vrplc10_11_30_s3.txt  vrplc10_11_30_s4.txt  vrplc10_11_30_s5.txt  vrplc10_11_30_s6.txt  vrplc10_11_30_s7.txt  vrplc10_11_30_s8.txt  vrplc10_11_30_s9.txt  (+110 more)
examples/vrplc/Instances/vrplc11/: vrplc11_11_10_s1.txt  vrplc11_11_10_s10.txt  vrplc11_11_10_s2.txt  vrplc11_11_10_s3.txt  vrplc11_11_10_s4.txt  vrplc11_11_10_s5.txt  vrplc11_11_10_s6.txt  vrplc11_11_10_s7.txt  vrplc11_11_10_s8.txt  vrplc11_11_10_s9.txt  vrplc11_11_15_s1.txt  vrplc11_11_15_s10.txt  vrplc11_11_15_s2.txt  vrplc11_11_15_s3.txt  vrplc11_11_15_s4.txt  (+135 more)
examples/vrptw/: Includes.h  InstanceData.cpp  InstanceData.h  vrptw.cpp
examples/vrptw/Solomon/: Solomon Optimal Solutions.csv  Solomon-C101-100.txt  Solomon-C101-25.txt  Solomon-C101-50.txt  Solomon-C101-75.txt  Solomon-C102-100.txt  Solomon-C102-25.txt  Solomon-C102-50.txt  Solomon-C102-75.txt  Solomon-C103-100.txt  Solomon-C103-25.txt  Solomon-C103-50.txt  Solomon-C103-75.txt  Solomon-C104-100.txt  Solomon-C104-25.txt  Solomon-C104-50.txt  Solomon-C104-75.txt  Solomon-C105-100.txt  Solomon-C105-25.txt  Solomon-C105-50.txt  Solomon-C105-75.txt  Solomon-C106-100.txt  Solomon-C106-25.txt  Solomon-C106-50.txt  Solomon-C106-75.txt  Solomon-C107-100.txt  Solomon-C107-25.txt  Solomon-C107-50.txt  Solomon-C107-75.txt  Solomon-C108-100.txt  Solomon-C108-25.txt  Solomon-C108-50.txt  Solomon-C108-75.txt  Solomon-C109-100.txt  Solomon-C109-25.txt  Solomon-C109-50.txt  Solomon-C109-75.txt  Solomon-C201-100.txt  Solomon-C201-25.txt  Solomon-C201-50.txt  (+185 more)
(+420 files in other folders)
